2008-04-03  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb-utils.c
	* tools/pdbgen/pdb/text_layer.pdb: GIMP_PDB_CALLING_ERROR and
	GIMP_PDB_EXECUTION_ERROR are not from the GimpPdbErrorCode
	enum. Use GIMP_PDB_INVALID_ARGUMENT instead.

	* app/pdb/text_layer_cmds.c: regenerated.

2008-04-03  Michael Natterer  <mitch@gimp.org>

	* plug-ins/help/gimphelpdomain.h: fix include guards.

2008-04-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-convert.c (gimp_image_convert): don't accept
	palettes with more than 256 colors.

	* tools/pdbgen/pdb/convert.pdb: fail here too for palettes
	with > 256 colors. Fixes bug #525471.

	* app/pdb/convert_cmds.c: regenerated.

2008-04-03  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Add Valencian-Catalan (ca@valencia).

2008-04-02  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/text/gimptextlayout.c
	* app/tools/gimptexttool.[ch]
	* app/tools/gimprectangletool.[ch]
	* app/tools/gimptextoptions.c: allow resizing of text
	box.  This is work in progress, and needs some tweaks
	and fixes.  See bug #122707.

2008-04-02  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.def: added new symbols.

2008-04-02  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/Makefile.am
	* tools/pdbgen/pdb/text_layer.pdb: new text layer PDB API created
	by Marcus Heese (see bug #164539).

	* app/pdb/Makefile.am
	* app/pdb/text_layer_cmds.c: new generated file.

	* libgimp/Makefile.am
	* libgimp/gimptextlayer_pdb.[ch]: new generated files.

	* app/pdb/internal_procs.[ch]
	* libgimp/gimp_pdb.h
	* tools/pdbgen/groups.pl: regenerated.

2008-04-02  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/app.pl: special treatment for gimppdberror.h to get
	a saner include order.

	* app/pdb/floating_sel_cmds.c
	* app/pdb/image_cmds.c: regenerated.

2008-04-02  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimppdb-utils.[ch]: added gimp_pdb_layer_is_text_layer().

2008-04-02  Sven Neumann  <sven@gimp.org>
