@@ -37,7 +37,8 @@ HELP
 	code => <<'CODE'
 {
   if (gimp_image_base_type (image) != GIMP_RGB)
-    success = gimp_image_convert (image, GIMP_RGB, 0, 0, FALSE, FALSE, 0, NULL,
+    success = gimp_image_convert (image, GIMP_RGB,
+                                  0, 0, FALSE, FALSE, 0, NULL,
                                   NULL, error);
   else
     success = FALSE;
@@ -66,7 +67,8 @@ HELP
 	code => <<'CODE'
 {
   if (gimp_image_base_type (image) != GIMP_GRAY)
-    success = gimp_image_convert (image, GIMP_GRAY, 0, 0, FALSE, FALSE, 0, NULL,
+    success = gimp_image_convert (image, GIMP_GRAY,
+                                  0, 0, FALSE, FALSE, 0, NULL,
                                   NULL, error);
   else
     success = FALSE;
@@ -119,7 +121,7 @@ HELP
     %invoke = (
 	code => <<'CODE'
 {
-  GimpPalette *pal = NULL;
+  GimpPalette *palette = NULL;
 
   if (gimp_image_base_type (image) != GIMP_INDEXED)
     {
@@ -131,12 +133,12 @@ HELP
 	  break;
 
 	case GIMP_CUSTOM_PALETTE:
-          pal = gimp_pdb_get_palette (gimp, palette, FALSE, error);
-	  if (! pal)
+          palette = gimp_pdb_get_palette (gimp, palette, FALSE, error);
+	  if (! palette)
             {
               success = FALSE;
             }
-          else if (pal->n_colors > 256)
+          else if (palette->n_colors > MAXNUMCOLORS)
             {
               g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                            _("Cannot convert to a palette "
@@ -150,11 +152,15 @@ HELP
 	}
     }
   else
-    success = FALSE;
+    {
+      success = FALSE;
+    }
 
   if (success)
-    success = gimp_image_convert (image, GIMP_INDEXED, num_cols, dither_type,
-                                  alpha_dither, remove_unused, palette_type, pal,
+    success = gimp_image_convert (image, GIMP_INDEXED,
+                                  num_cols, dither_type,
+                                  alpha_dither, remove_unused,
+				  palette_type, palette,
                                   NULL, error);
 }
 CODE
@@ -186,7 +192,7 @@ HELP
     %invoke = (
 	code => <<'CODE'
 {
-  gimp_image_convert_set_dither_matrix (width, height, (guchar *) matrix);
+  gimp_image_convert_set_dither_matrix (matrix, width, height);
 }
 CODE
     );
