@@ -1,3 +1,12 @@
+2008-04-04  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimage-convert.[ch]
+	(gimp_image_convert_set_dither_matrix): minor cleanup.
+
+	* tools/pdbgen/pdb/convert.pdb: changed accordingly.
+
+	* app/pdb/convert_cmds.c: regenerated.
+
 2008-04-03  Michael Natterer  <mitch@gimp.org>
 
 	* app/pdb/gimppdb-utils.c
